--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <ul class="hero-meta">
           <li><i class="fa-regular fa-envelope"></i> <a href="mailto:jafari.keinaz@gmail.com">jafari.keinaz@gmail.com</a></li>
-          <li><i class="fa-brands fa-github"></i> <a href="https://github.com/Keynaz-Jafari" target="_blank" rel="noreferrer">github.com/keinaz</a></li>
+          <li><i class="fa-brands fa-github"></i> <a href="https://github.com/Keynaz-Jafari" target="_blank" rel="noreferrer">https://github.com/Keynaz-Jafari</a></li>
           <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/in/keynaz-jafari-3b16b7245" target="_blank" rel="noreferrer">linkedin.com/in/keynaz-jafari</a></li>
         </ul>
       </div>
@@ -222,7 +222,7 @@
       <p class="muted">Open to research collaborations, RA/TA roles, and HCI/SE projects.</p>
       <ul class="contact-list">
         <li><i class="fa-regular fa-envelope"></i> <a href="mailto:jafari.keinaz@gmail.com">jafari.keinaz@gmail.com</a></li>
-        <li><i class="fa-brands fa-github"></i> <a href="https://github.com/Keynaz-Jafari" target="_blank" rel="noreferrer">github.com/keinaz</a></li>
+        <li><i class="fa-brands fa-github"></i> <a href="https://github.com/Keynaz-Jafari" target="_blank" rel="noreferrer">https://github.com/Keynaz-Jafari</a></li>
         <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/in/keynaz-jafari-3b16b7245" target="_blank" rel="noreferrer">linkedin.com/in/keynaz-jafari</a></li>
       </ul>
     </div>
